@@ -1,2 +1,30 @@
 # Java-GUI-Webscraping
 Webscraping with JSoup,  📚 Books Search &amp; Read 
+
+INSTALLATION INSTRUCTIONS
+1. In VS Code: install JDK and Java plugins.
+  
+   adding refrence libraries.
+
+   ![image](https://github.com/adityacodepublic/Java-GUI-Webscraping/assets/93919558/251e6d32-d446-42fc-8d12-86f520ee9e60)
+
+   editing launch.json to 
+   "type": "java",
+            "name": "Launch YourApp",
+            "request": "launch",
+            "mainClass": "app.YourApp",
+            "projectName": "reviewsite-main_66eb64c7",
+            "vmArgs": "--module-path lib/javafx-sdk-21/lib --add-modules javafx.web,javafx.swing,javafx.fxml,javafx.controls,javafx.graphics,javafx.base,javafx.media",
+            "args": "",
+
+
+
+   # Screenshot
+
+   ![image](https://github.com/adityacodepublic/Java-GUI-Webscraping/assets/93919558/7359811c-b791-4d97-a4ab-46f74a1faf09)
+
+  ![image](https://github.com/adityacodepublic/Java-GUI-Webscraping/assets/93919558/0a144a80-1b13-4ebe-8fdb-cbd66a2aa2d4)
+
+  opens books in google books preview. 
+
+
